--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,5 +10,12 @@
     "delete": "Delete",
     "share": "Share",
     "add": "Add",
-    "data_empty": "Data empty"
+    "data_empty": "Data empty",
+    "passwordConfirm": "Confirm password can't be empty",
+    "passwordMatch": "Password doesn't match",
+    "passwordEmpty": "Password can't be empty",
+    "passwordLength": "Password must be at-least 6 characters long",
+    "errorUsername":"Username and password doesn't match",
+    "errorUnauthorized": "Unauthorized",
+    "errorNetwork": "Something went wrong, please check your network and try again"
 }
