locale on login

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,9 @@
     "share": "Share",
     "add": "Add",
     "data_empty": "Data empty",
+    "loginEmpty": "Email can't be empty",
+    "loginValidEmail": "Please enter a valid email address",
+    "loginTryEmail": "Email provided isn't valid.Try another email address",
     "passwordConfirm": "Confirm password can't be empty",
     "passwordMatch": "Password doesn't match",
     "passwordEmpty": "Password can't be empty",
