--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -11,6 +11,9 @@
     "share": "Sebar",
     "add": "Tambah",
     "data_empty": "Data Kosong",
+    "loginEmpty": "Email can't be empty",
+    "loginValidEmail": "Please enter a valid email address",
+    "loginTryEmail": "Email provided isn't valid.Try another email address",
     "passwordConfirm": "Sandi tidak boleh kosong",
     "passwordMatch": "Sandi tidak cocok",
     "passwordEmpty": "Sandi tidak boleh kosong",
